syntax = "proto3";
package gproto;

message file_struct {
    string name = 1;
    int64 mtime = 2;
    uint32 mode = 3;
    int64 size = 4;
    string hash = 5;
}

message dir_struct {
    string name = 1;
    int64 mtime = 2;
    uint32 mode = 3;
    repeated file_struct fileList = 4;
    repeated dir_struct dirList = 5; 
}

